--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
+    "jest-scss-transform": "^1.0.4",
     "prettier": "^3.7.4",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
